--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -26,10 +26,10 @@ body {
 }
 
 .body--preview .preview-box {
-  margin-top: 6rem;
-  margin-bottom: 6rem;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
   /* height: 157.71429rem; */
-  overflow: scroll;
+  overflow: hidden;
 }
 
 .body--share {
@@ -146,7 +146,7 @@ body {
   max-width: 120rem;
   width: 100%;
   font-size: 1.7rem;
-  padding: 0rem 8rem;
+  padding: 0rem 3rem;
 }
 
 .container__main {
@@ -169,7 +169,7 @@ body {
   -webkit-box-pack: start;
   -ms-flex-pack: start;
   justify-content: flex-start;
-  margin-bottom: 3.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .title__name {
@@ -207,8 +207,8 @@ body {
   height: 4px;
   width: 5rem;
   border: 2px solid #000;
-  margin-top: 1rem;
-  margin-bottom: 2.5rem;
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
 }
 
 .sidebar {
